# least-watched

./: .cursorignore  .cursorrules  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  compose.yml  deletion-score-settings-example.json  docker-entrypoint.sh  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  scan page.md  seed-config.example.json  test-config.json  vitest.config.ts
.claude/: settings.local.json
.cursor/: ADOPTING_TANSTACK.md  COMBINING_COMPONENTS.md  implement plan.md
.cursor/commands/: refactor.md  write-requirements.md  write-tests.md
.cursor/rules/: code-quality.mdc  (+9 more)
docs/: CACHING_IMPLEMENTATION_SUMMARY.md  DATABASE_SETUP.md  DATE_HANDLING_FIX_SUMMARY.md  SEED_CONFIG_README.md  app-settings-backup-restore.md  app-settings.md  emby-first-arch.md  emby-integration.md  emby-playback-reporting.md  emby-title-collision-strategy.md  event-system.md  folder-space-widget.md  media-items-table-and-filters.md  media-processor.md
openapi/: emby.openapi.json  openapi-ts.emby.ts  openapi-ts.radarr.ts  openapi-ts.sonarr.ts
prisma/: schema.prisma
scripts/: db-cli.ts  dev-server.sh  migrate-emby-single-instance.ts  seed-database.ts
src/: cli.py  common.py  common.ts  config.py  db.ts  db_service.py  display.py  env.ts  get_episodes.py  get_episodes.ts  get_libraries.py  get_shows_list.py  get_shows_list.ts  main.py  media_processor.py  models.py  query_playbacks.py  query_playbacks.ts  web_app.py
templates/: index.html  media_list.html
tests/: common_test.ts  main_test.ts  test_consistency.py
(+275 files in other folders)
