[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sean <seantsusmilch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
httpx = "^0.27.2"
cachetools = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"
