[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sean <seantsusmilch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
httpx = "^0.27.2"
cachetools = "^5.5.0"
arrapi = "^1.4.13"
setuptools = "^75.8.0"
tqdm = "^4.66.2"
dateparser = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"
